ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail180.hs

-- Showed up a bug in bodySplitTyConApp

module ShouldFail where

p :: f b
p = error "urk"

g x = case p of
        True -> ()
